--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='ja'>
 <head>
   <meta charset='utf-8'>
-  <title>たいとる</title>
+  <title>ほーむぺーじ</title>
   <meta property="og:title" content="たいとる">
   <meta property="og:description" content="せつめいせつめい">
   <meta name="theme-color" content="#ECECF7">
@@ -22,20 +22,20 @@
 <body>
   <div class=header>
     <h1>私のホームページ</h1>
-    <div>せつめいはまだない。</div>
+    <div>中学時代の部活</div>
   </div>
   <div class=main>
     <div>
       <h2>クラブ</h2>
       <div>
-        水泳部
+        家庭科部
       </div>
     </div>
 
     <div>
       <h2>趣味</h2>
       <div>
-        YouTube
+        YouTube、ゲーム
       </div>
     </div>
   </div>
