--- a/rep01.html
+++ b/rep01.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>〇〇班〇〇番 ニックネーム</div>
+    <div>4a班21番 rei0521</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -31,9 +31,9 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを～～～自分の文章で続きを書く。<br>
+        スクラッチを使って線を書くプログラムを使って、絵を描いた。<br>
         2.感想<br>
-        感想を自分で書く。<br>
+        最初は設定していた数が大きすぎて、なかなかきれいな線がかけなったが、一つずつプログラムの数を小さくして行くときれいな虹色の線できれいな円を描くことができたので、嬉しかった。<br>
       </div>
     </div>
 
@@ -42,9 +42,9 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        猫のキャラクターとコウモリのキャラクターを使って、コウモリが落ちていくのを猫がキャッチする、というゲームを作った。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        一度に二個のキャラクターのプログラミングをしたので、頭がこんがらがって大変だったが、となりの子が助けてくれたので無事にゲームを作ることができた。<br>        
       </div>
     </div>
 
@@ -54,7 +54,7 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://rei0521.github.io/web2023/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        githubを使って自分のホームページを作る。<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>      
