--- a/rep01.html
+++ b/rep01.html
@@ -56,13 +56,13 @@
         1.内容<br>
         githubを使って自分のホームページを作る。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        全部英語で書かれているし、文字がありすぎて何言ってんのかわかんなくてメチャクチャ焦ったが、先生と友達が助けてくれたので、トラブルもあまりなく、自分のホームページを作ることができた。<br>        
       </div>      
     </div>
     
   </div>
   <div class=footer>
-    作成日：2023年MM月DD日
+    作成日：2023年05月10日
   </div>
 </body>
 </html>
