--- a/rep02.html
+++ b/rep02.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>２週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>○○班○○番 ニックネーム</div>
+    <div>4a班21番 rei0521</div>
   </div>
   <div class=2week>
     <h2>第2週目</h2>
@@ -31,7 +31,7 @@
       <a href="https://rei0521.github.io/web2023/rep01.html">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        1<br>
+        1週目の復習<br>
         2.感想<br>
         かんそうかんそう<br>
       </div>
