--- a/rep02.html
+++ b/rep02.html
@@ -33,7 +33,8 @@
         1.内容<br>
         1週目の復習<br>
         2.感想<br>
-        かんそうかんそう<br>
+        前回から期間があいていたのでホームページの書き方を忘れていた所がいくつかあったが、ゆっくりともう一度説明してくれたので、ちゃんと思い出すことができた。
+       <br>
       </div>
     </div>
 
@@ -42,9 +43,9 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        機械学習とは何なのか、今の技術がどこまで進歩しているのかの解説<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        機械学習とはどういう技術なのか、という説明がとても分かりやすかったし、今の技術がどれくらい進歩しているのか知ることができた。<br>        
       </div>
     </div>
     
@@ -53,9 +54,10 @@
       <img src="wroom.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRゴーグルを使ってヴァーチャルを体験する。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        初めてのVRゴーグルだったので緊張したが、先生が優しく教えてくれたので、楽しくヴァーチャルを体験できた。でも、結構画面酔いをした。
+       　<br>
       </div>
     </div>
     
