--- a/rep03.html
+++ b/rep03.html
@@ -21,7 +21,7 @@
 <body>
   <div class=header>
     <h1>最終レポート ： 公大高専１年実習I-1</h1>
-    <div>〇〇班〇〇番 ニックネーム</div>
+    <div>4a班21番 rei0521</div>
   </div>
   <div class=3week>
     <h2>第3週目</h2>
@@ -61,13 +61,13 @@
   <div class=2week>
     <h2>第2週目のレポート</h2>
       <div>
-        <a href="https://yourID.github.io/web2023/rep02.html">2週目のレポート</a><br>
+        <a href="https://rei0521.github.io/web2023/rep02.html">2週目のレポート</a><br>
       </div>
   </div>
   <div class=1week>
     <h2>第1週目のレポート</h2>
       <div>
-        <a href="https://yourID.github.io/web2023/rep01.html">1週目のレポート</a><br>
+        <a href="https://rei0521.github.io/web2023/rep01.html">1週目のレポート</a><br>
       </div>
   </div>
                                                              
