--- a/rep03.html
+++ b/rep03.html
@@ -31,7 +31,7 @@
       <a href="https://rei0521.github.io/web2023/vr.html">自作した３次元空間</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        JavaScriptを使って、<br>
         2.感想<br>
         かんそうかんそう<br>
       </div>
