--- a/rep03.html
+++ b/rep03.html
@@ -31,9 +31,9 @@
       <a href="https://rei0521.github.io/web2023/vr.html">自作した３次元空間</a><br>                                   
       <div>
         1.内容<br>
-        JavaScriptを使い、<br>
+        JavaScriptでのプログラミング体験<br>
         2.感想<br>
-        かんそうかんそう<br>
+        プログラミングの仕方も簡単で、色も自由に変えれたので楽しかった。<br>
       </div>
     </div>
     <div>
@@ -42,9 +42,10 @@
       <a href="https://rei0521.github.io/web2023/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        プログラミング道場での文字によるプログラミング体験<br>
         2.感想<br>
-        かんそうかんそう<br>
+        半角スペースや半角記号などの色んな文字があるので、打ち間違えないように文字を打つのが大変だった。
+                  <br>
       </div>
     </div>
 
@@ -52,9 +53,9 @@
       <h3>3-3 JavaScriptプログラムの３次元空間の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRゴーグルを使ってVRを体験<br>
         2.感想<br>
-        かんそうかんそう<br>
+        目の前に本当に空間があるみたいでリアルだった。白色の球をたくさん出すのが楽しかった。<br>
       </div>
     </div>
   
@@ -72,7 +73,7 @@
   </div>
                                                              
   <div class=footer>
-    作成日：2023年MM月DD日
+    作成日：2023年05月17日
   </div>
 </body>
 </html>
